# -ADGM-Compliant-Corporate-Agent-with-Document-Intelligence

./: README.md  demo.py  pyproject.toml
tests/: test_main.py
