[project]
name = "corporate_agent"
version = "0.1.0"
description = "Streamlit-based AI agent using LangChain and LangGraph"
authors = [{ name = "Aman" }]
requires-python = ">=3.10"

dependencies = [
    "streamlit>=1.31.0",
    "langchain>=0.1.0",
    "langchain-groq>=0.1.0",
    "langgraph>=0.1.0",
    "python-docx>=0.8.11",
    "python-multipart>=0.0.6",
    "pydantic>=2.0.0",
    "PyPDF2>=3.0.0",
    "pdfplumber>=0.10.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
